Migrate to new Wear View support library.

--- a/src/main/res/layout/activity_phone_app_notice.xml
+++ b/src/main/res/layout/activity_phone_app_notice.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.wearable.view.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
               android:layout_width="match_parent"
@@ -9,7 +9,7 @@
         android:id="@+id/no_phone_error_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_box="all"
+        app:boxedEdges="all"
         android:layout_marginTop="10dp">
         <TextView
             android:layout_width="wrap_content"
@@ -37,4 +37,4 @@
         android:indeterminateOnly="true"
         />
 
-</android.support.wearable.view.BoxInsetLayout>
+</android.support.wear.widget.BoxInsetLayout>
