Load imagepicker images asynchronously.

--- a/src/main/res/layout/dialog_image_picker.xml
+++ b/src/main/res/layout/dialog_image_picker.xml
@@ -9,10 +9,20 @@
     android:paddingTop="10dp"
     android:orientation="vertical">
 
+    <ProgressBar
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:id="@+id/progress"
+        android:indeterminate="true"
+        android:indeterminateOnly="true"
+        android:layout_centerHorizontal="true"
+        android:visibility="gone"/>
+
     <ImageView
         android:id="@+id/image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:minHeight="48dp"
         android:layout_centerHorizontal="true"
         android:adjustViewBounds="true"
         android:maxHeight="150dp"
